objects/Convert_Notes_to_ContentNotes_Settings__c.object
<CustomObject><fields>
        <fullName>Conversion_Result_Email_Notifications__c</fullName>
        <description>Comma-separated list of email addresses to send conversion result information to after each batch of conversions. Email may contain up to 200 conversion results at a time indicating which were successful and any warnings. If blank then no emails are sent.</description>
        <inlineHelpText>Comma-separated list of email addresses to send conversion result information to after each batch of conversions. Email may contain up to 200 conversion results at a time indicating which were successful and any warnings. If blank then no emails are sent.</inlineHelpText>
        <label>Conversion Result Email Notifications</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Convert_If_Feed_Tracking_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Chatter Feed Tracking is disabled for the note's parent object then the converted note won't be able to be shared with the parent record. Enable this option to convert the note anyways even though it will not be shared with any records.</description>
        <inlineHelpText>If Chatter Feed Tracking is disabled for the note's parent object then the converted note won't be able to be shared with the parent record. Enable this option to convert the note anyways even though it will not be shared with any records.</inlineHelpText>
        <label>Convert If Feed Tracking Disabled?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Convert_in_Near_Real_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables 'after insert' trigger on Note that enqueues job to convert into ContentNotes in near real-time. This async conversion does not slow down save transaction, and if 'Delete Notes' option is enabled then deletes in separate transaction too.</description>
        <inlineHelpText>Enables 'after insert' trigger on Note that enqueues job to convert into ContentNotes in near real-time. This async conversion does not slow down save transaction, and if 'Delete Notes' option is enabled then deletes in separate transaction too.</inlineHelpText>
        <label>Convert in Near Real Time?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Delete_Note_Once_Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked then conversion process will delete the original Note once successfully converted to ContentNote. You may want to delete them to save storage space in your org.</description>
        <inlineHelpText>When checked then conversion process will delete the original Note once successfully converted to ContentNote. You may want to delete them to save storage space in your org.</inlineHelpText>
        <label>Delete Note Once Converted?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Share_Private_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notes have 'IsPrivate' field that limits access to owner and admins. ContentNotes related to records are not private. Enable this option to share converted private notes with their parent record and to anyone who has access to the parent record.</description>
        <inlineHelpText>Notes have 'IsPrivate' field that limits access to owner and admins. ContentNotes related to records are not private. Enable this option to share converted private notes with their parent record and to anyone who has access to the parent record.</inlineHelpText>
        <label>Share Private Notes?</label>
        <type>Checkbox</type>
    </fields><customSettingsType>Hierarchy</customSettingsType><description>Controls when and how certain notes are converted to files.</description><enableFeeds>false</enableFeeds><label>Convert Notes to ContentNotes Settings</label><visibility>Public</visibility></CustomObject>